# tdm-gcc-installer

./: .gitignore  .hgignore  .hgtags  CMakeLists.txt  GCC-VERSION.txt  Makefile  README.TDMInstall.txt  README.md  SETUP-VERSION.txt  TDMInstall.cbp  archive.cpp  archive_7z.cpp  archive_base.c  archive_zip.cpp  arcout.template.txt  componentstree.cpp  componentstree.hpp  config.h  ctemplate.cpp  ctemplate_test.txt  inner-manifest-tdm32.txt  inner-manifest-tdm64.txt  inner-manifest.txt  install_manifest.cpp  install_manifest.hpp  main.nsh  mingw-build.cmd  mingw-build.sh  multiread.c  multiread.h  multiread_lzma.c  nsis_interface.cpp  prune_manifest.cc  prune_manifest_test.txt  ref.hpp  setup_full.nsi  setup_full_tdm32.nsi  setup_full_tdm64.nsi  setup_version.h.in  setup_webdl.nsi  (+3 more)
7z/: MODIFIED_LZMA.txt  README.txt
bzip2/: MODIFIED_BZIP2.txt
plugins/: README-plugins.txt
zlib/: MODIFIED_ZLIB.txt  deflate.c
